[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/visual/GWJ-Full-Logo-noBG.png" type="Texture" id=1]
[ext_resource path="res://assets/visual/GWJ-42-Theme.png" type="Texture" id=2]
[ext_resource path="res://assets/fonts/Redressed/Redressed-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://scripts/Menu.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=3]
size = 100
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=1]
size = 50
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[node name="Menu" type="Control"]
margin_right = 1024.0
margin_bottom = 600.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreditFadeOut" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="Menu" type="ColorRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="Menu"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -403.5
margin_top = 30.0
margin_right = 403.5
margin_bottom = 149.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "The Royal Game of Ur"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="List" type="VBoxContainer" parent="Menu"]
margin_left = 412.0
margin_top = 233.0
margin_right = 612.0
margin_bottom = 367.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play" type="Button" parent="Menu/List"]
margin_right = 200.0
margin_bottom = 42.0
rect_min_size = Vector2( 200, 0 )
custom_fonts/font = SubResource( 2 )
text = "Play"

[node name="Credits" type="Button" parent="Menu/List"]
margin_top = 46.0
margin_right = 200.0
margin_bottom = 88.0
rect_min_size = Vector2( 200, 0 )
custom_fonts/font = SubResource( 2 )
text = "Credits"

[node name="Rules" type="Button" parent="Menu/List"]
margin_top = 92.0
margin_right = 200.0
margin_bottom = 134.0
rect_min_size = Vector2( 200, 0 )
custom_fonts/font = SubResource( 2 )
text = "Rules"

[node name="Credits" type="Control" parent="."]
margin_right = 200.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BG" type="ColorRect" parent="Credits"]
margin_right = 1024.0
margin_bottom = 600.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Theme" type="TextureRect" parent="Credits"]
visible = false
margin_left = 337.0
margin_top = 366.0
margin_right = 687.0
margin_bottom = 466.0
texture = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="Credits"]
margin_right = 1024.0
margin_bottom = 600.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Entry" type="Label" parent="Credits/VBoxContainer"]
margin_right = 1024.0
margin_bottom = 123.0
custom_colors/font_color = Color( 0.980392, 0.380392, 0.286275, 1 )
custom_fonts/font = SubResource( 1 )
text = "
An Entry for the 42."
align = 1
valign = 1

[node name="Logo" type="TextureRect" parent="Credits/VBoxContainer"]
margin_top = 127.0
margin_right = 1024.0
margin_bottom = 410.0
size_flags_horizontal = 7
size_flags_vertical = 7
texture = ExtResource( 1 )
stretch_mode = 4

[node name="Member" type="Label" parent="Credits/VBoxContainer"]
margin_top = 414.0
margin_right = 1024.0
margin_bottom = 600.0
custom_colors/font_color = Color( 0.980392, 0.380392, 0.286275, 1 )
custom_fonts/font = SubResource( 1 )
text = "created by 
evilcookie, j0braun, Kjarrigan and Tch1bo
"
align = 1
valign = 1

[connection signal="timeout" from="CreditFadeOut" to="." method="_on_CreditFadeOut_timeout"]
[connection signal="pressed" from="Menu/List/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Menu/List/Credits" to="." method="_on_Credits_pressed"]
